# neoflow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  gitlab_repos.yaml  pyproject.toml  requirements.txt
docs/: AGENT_SYSTEM.md  API_SERVER.md  CHAT_SYSTEM.md  CLI_REFERENCE.md  CONFIGURATION.md  DATA_IMPORT.md  DB_COMMANDS.md  DICTIONARY_COMPRESSION.md  GITLAB_INTEGRATION.md  KNOWLEDGE_PACK.md  LLM_PROVIDERS.md  LOOP_DETECTION.md  MCP_INTEGRATION.md  OVERVIEW.md  README.md  SEARCH_FEATURES.md  TEMPLATE_SYSTEM.md  VLLM_SETUP.md
docs/agent_system_prompt/: neoflow_tools_dev.md
docs/tools/: README.md
docs/tools/complex/: README.md  manifest.json
docs/tools/complex/tools/: release_helpers.py  release_tools.py  tool_definition.py
docs/tools/medium/: README.md  manifest.json
docs/tools/medium/tools/: repo_snapshot_tool.py
docs/tools/simple/: README.md  manifest.json
docs/tools/simple/tools/: say_hello_tool.py
neoflow/: chat.py  cli.py  config.py  init.py  knowledge_pack.py  llm_error_handler.py  llm_provider.py  model_profiles.py  models.py  prompts.py  status_bar.py  template.py  tool_pack.py  weaviate_client.py
neoflow/agent/: agent.py  context_optimizer.py  dictionary_compression.py  domains.py  input.py  loop_detector.py  planner.py  task_executor.py  task_manager.py  tool_registry.py
neoflow/agent_system_prompt/: README.md  api_design.md  online.md  page_crawler.md  python.md  qa.md  test_cases.md
neoflow/api/: __init__.py  dependencies.py  middleware.py  models.py  server.py  session_manager.py
neoflow/api/routes/: __init__.py  health.py  query.py  sessions.py  templates.py
neoflow/gitlab/: api.py  indexer.py
neoflow/importer/: chunkers.py  code_indexer.py  documentation.py  importer.py
neoflow/mcp/: README.md  __init__.py  proxy.py  server.py  tools.py
neoflow/search/: tools.py
neoflow/templates/: api_docs.yaml  bug.yaml  review.yaml  sow.yaml  status.yaml
scripts/: install_docs_knowledge_pack.sh
